syntax = "proto3";

package product;

option go_package = "github.com/santig05/Distributed-Systems-gRPC/libs/protobufs;products";

service ProductService {
  rpc GetProduct (ProductRequest) returns (ProductResponse);
}

message ProductRequest {
  string id = 1;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}
